added home apps template

--- a/templates/base.html
+++ b/templates/base.html
@@ -48,12 +48,15 @@
     <div class="message-container"></div>
     {% endif %}
 
+    <!-- page header content-->
     {% block page_header %}
     {% endblock %}
 
+     <!-- page content-->
     {% block content %}
     {% endblock %}
 
+     <!--JS code to load at the end of the page-->
     {% block postloadjs %}
     {% endblock %}
 
