--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,8 @@
     {% block corecss %}
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato&display=swap">
+     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% endblock %}
 
     {% block extra_css %}
@@ -24,6 +26,7 @@
 
     {% block corejs %}
     <!-- Optional JavaScript -->
+    <script src="https://kit.fontawesome.com/ef97e751b3.js" crossorigin="anonymous"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
 		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
@@ -45,6 +48,7 @@
     <header class="container-fluid fixed-top">
         <div class="row">
         <!-- vertically centred with a bit of top and bottom padding on smaller screens.-->
+        <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex"></div>
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
             <a href="{% url 'home' %}" class="nav-link main-logo-link">
             <h2 class="logo-font text-black my-0"><strong>Boutique</strong></h2>
@@ -58,7 +62,7 @@
 						<div class="inpup-group-append">
 							<button class="form-control btn btn-black border border-black rounded-0" type="submit">
 			                    <span class="icon">
-			                        <i class="fa fa-search"></i>
+			                        <i class="fas fa-search"></i>
 			                    </span>
 			                </button>
 						</div>
@@ -69,41 +73,42 @@
 			<div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
 				<ul class="list-inline list-unstyled text-center text-lg-right my-0">
 					<li class="list-inline-item dropdowm">
-                    <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <div class="text-center">
-                                <div><i class="fas fa-user fa-lg"></i></div>
-                                <p class="my-0">My Account</p>
-                            </div>
-                        </a>
-                        <div class="dropdown-menu border-0" aria-labelledby="user-options">
-                        <!-- If the user is authenticated, display a drop-down item for their profile and a link to logout.-->
-                        {% if request.user.is_authenticated %}
-                         {% if request.user.is_superuser %}
-                         <a href="" class="dropdown-item">Product Management</a>
-                         {% endif %}
-                         <a href="" class="dropdown-item">Profile</a>
-                         <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
-                         { else %}
-                         <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-                         <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
-                         {% endif %}
-                        </div>
-                    </li>
+						<a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true"
+							aria-expanded="false">
+							<div class="text-center">
+								<div><i class="fas fa-user fa-lg"></i></div>
+								<p class="my-0">My Account</p>
+							</div>
+						</a>
+						<div class="dropdown-menu border-0" aria-labelledby="user-options">
+							<!-- If the user is authenticated, display a drop-down item for their profile and a link to logout.-->
+							{% if request.user.is_authenticated %}
+							    {% if request.user.is_superuser %}
+							        <a href="" class="dropdown-item">Product Management</a>
+							    {% endif %}
+							    <a href="" class="dropdown-item">Profile</a>
+							    <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+							{% else %}
+							    <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+							    <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+							{% endif %}
+						</div>
+					</li>
 					<li class="list-inline-item">
-                    <!-- if there's something in the bag the font will be bold and a different colour.-->
-                    <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="">
-                            <div class="text-center">
-                                <div><i class="fas fa-shopping-bag fa-lg"></i></div>
-                                <p class="my-0">
-                                {% if grand_total %}
-                                ${{ grand_total|floatformat:2 }}
-                                {% else %}
-                                $0.00
-                                {% endif %}
-                                </p>
-                            </div>
-                    </a>
-                    </li>
+						<!-- if there's something in the bag the font will be bold and a different colour.-->
+						<a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="">
+							<div class="text-center">
+								<div><i class="fas fa-shopping-bag fa-lg"></i></div>
+								<p class="my-0">
+									{% if grand_total %}
+									${{ grand_total|floatformat:2 }}
+									{% else %}
+									$0.00
+									{% endif %}
+								</p>
+							</div>
+						</a>
+					</li>
 				</ul>
 			</div>
         </div>
